update npm commands, db json added, app js updated

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <title>ToDoList</title>
 </head>
 <body>
-    
+    <h1> Mi lista de pendientes</h1>
+    <form id="add-task">
+        <div><label for="add-task-area"> Ingresa la tarea</label></div>
+        <div><textarea id="add-task-area"></textarea></div>
+        <button>Agregar tarea a lista</button>
+    </form>
+    <ul id="todo-list">
+    </ul>
 </body>
 </html>
