todo list basic functionality working, remove tasks added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +10,11 @@
     <title>ToDoList</title>
 </head>
 <body>
-    <h1> Mi lista de pendientes</h1>
+    <h1> My pending tasks</h1>
     <form id="add-task">
-        <div><label for="add-task-area"> Ingresa la tarea</label></div>
-        <div><textarea id="add-task-area"></textarea></div>
-        <button>Agregar tarea a lista</button>
+        <div><label for="enter-task-area"> Enter a new task</label></div>
+        <div><textarea id="enter-task-area"></textarea></div>
+        <button>Add the new task to the list</button>
     </form>
     <ul id="todo-list">
     </ul>
