bootstrap getting started configuration added and basic list working

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>ToDoList</title>
 </head>
 <body>
+    <a href="/index-bootstrap.html"> Bootstrap link </a>
+    <a href="/index-materialize.html"> Materialize link </a>
+
     <h1> My pending tasks</h1>
     <form id="add-task">
         <div><label for="enter-task-area"> Enter a new task</label></div>
