foundations, materialize and bulma framework added

--- a/index-bulma.html
+++ b/index-bulma.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="/css/app.css">
     <script src="js/app.js" async defer></script>
 
-    <!-- Materialize Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Bulma Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css" />
 
     <title>ToDoList</title>
 </head>
@@ -21,10 +21,7 @@
         <div><textarea id="enter-task-area"></textarea></div>
         <button>Add the new task to the list</button>
     </form>
-    <ul id="todo-list" class="collection" data-framework="materialize">
+    <ul id="todo-list" class="list is-hoverable" data-framework="bulma">
     </ul>
-
-    <!-- Materialize Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
