--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <a href="/index-bootstrap.html"> Bootstrap link </a>
     <a href="/index-materialize.html"> Materialize link </a>
+    <a href="/index-foundations.html"> Foundations link </a>
+    <a href="/index-bulma.html"> Bulma link </a>
 
     <h1> My pending tasks</h1>
     <form id="add-task">
